corrected it and added the missing part 2